--- a/hello-react/index.html
+++ b/hello-react/index.html
@@ -12,9 +12,9 @@
     <title>Hello React</title>
 </head>
 
-<body>
+<body> 
     <div id="root"></div>
-    <script src="index.js" text="text/babel"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
